Add FunctionController